agregue en la página el responsive, cambie los valores col-xs

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <!--menu-->
 <header>
-	<nav class="navbar navbar">
-		<div class="container-fluid">
+	<nav class="navbar navbar-default">
+		<div class="container-fluid barra">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12">
 					<div class="navbar-header">
@@ -55,8 +55,8 @@
 	<div class="container-fluid foto">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-6 col-sm-6 col-md-6">
-					<h4 class="text-center">Oh! So Creamy</h4>
+				<div class="col-xs-12 col-sm-6 col-md-6">
+					<h3 class="text-center">Oh! So Creamy</h3>
 					<p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias deleniti corrupti porro, ex ipsa qui nobis dolorum quaerat odit, sequi, et! Molestias aperiam, asperiores ullam consequuntur, architecto adipisci eligendi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt blanditiis magnam quas, cumque corporis nam, earum. Beatae numquam, quisquam adipisci quo pariatur eligendi, fuga necessitatibus quos iusto soluta, ducimus nihil. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur mollitia aut veniam eaque officiis, natus maxime quia aspernatur iste dolorem facilis velit sint adipisci. Sunt distinctio possimus, aliquam dolorem aliquid!></p>
 				</div>
 				<div class="col-xs-6 col-sm-6 col-md-6">
@@ -86,17 +86,17 @@
 	<div class="container-fluid tres">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-4 col-sm-4 col-md-4">
+				<div class="col-xs-12 col-sm-4 col-md-4">
 					<i class="fa fa-desktop fa-5x" aria-hidden="true"></i>
 					<h2 class="text-center">Desktop</h2>
 					<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit nam necessitatibus, maxime deserunt perspiciatis mollitia voluptatem odio, voluptas ipsa ullam hic dicta, porro laboriosam repudiandae asperiores labore commodi. Voluptatibus, magni.</p>
 				</div>
-				<div class="col-xs-4 col-sm-4 col-md-4">
+				<div class="col-xs-12 col-sm-4 col-md-4">
 					<i class="fa fa-tag fa-5x" aria-hidden="true"></i>
 					<h2 class="text-center">Tags</h2>
 					<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit nam necessitatibus, maxime deserunt perspiciatis mollitia voluptatem odio, voluptas ipsa ullam hic dicta, porro laboriosam repudiandae asperiores labore commodi. Voluptatibus, magni.</p>
 				</div>
-				<div class="col-xs-4 col-sm-4 col-md-4">
+				<div class="col-xs-12 col-sm-4 col-md-4">
 					<i class="fa fa-heart fa-5x" aria-hidden="true"></i>
 					<h2 class="text-center">Love</h2>
 					<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit nam necessitatibus, maxime deserunt perspiciatis mollitia voluptatem odio, voluptas ipsa ullam hic dicta, porro laboriosam repudiandae asperiores labore commodi. Voluptatibus, magni.</p>
@@ -112,7 +112,7 @@
 	</div>
 </footer>
 <!--enlaces-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script><link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script><link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </body>
 </html>
